# MyQmlApp

./: .gitignore  CMakeLists.txt  Main.qml
